--- a/src/App.css
+++ b/src/App.css
@@ -80,12 +80,10 @@ body{
 
 .section1{
   background-color: rgb(63, 52, 52);
-  border: red solid;
 }
 
 .tartine{
   display: flex;
-  border: green solid;
   margin: auto;
   width: 80%;
   justify-content: space-between;
@@ -106,3 +104,19 @@ h1{
 
 }
 
+footer{
+  background-color: rgb(0, 0, 0);
+  color:white;
+  margin-top: 30%;
+  height: 55px;
+}
+
+footer>p{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  
+
+
+}
